# ising-form

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md
docs/examples/: sat-to-ising.py
src/ising_form/: ising.py
