[metadata]
name = ising-form
description = Ising formulations of NP problems
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = physics, optimization, graph, SAT
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Shahnawaz Ahmed
author_email = shahnawaz.ahmed95@gmail.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    numpy
setup_requires =
    packaging

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
